--- a/index.html
+++ b/index.html
@@ -22,79 +22,232 @@ path {
 <body>
 
 <!-- load the d3.js library -->    
-<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
 
 <script>
+    function Scatterplot(data, {
+        value = d => d,
+        domain,
+        label,
+        format,
+        type = d3.scaleLinear,
+        x = value,
+        y = () => 1,
+        thresholds = 40,
+        normalize,
+        marginTop = 20,
+        marginRight = 30,
+        marginBottom = 30,
+        marginLeft = 40,
+        width = 640,
+        height = 400,
+        insetLeft = 0.5,
+        insetRight = 0.5,
+        xType = type,
+        xDomain = domain,
+        xRange = [marginLeft, width - marginRight],
+        xLabel = lebel,
+        xFormat = format,
+        yType = d3.scaleLinear,
+        yDomain,
+        yRange = [height - marginBottom, marginTop],
+        yLabel = "Number of Cases",
+        yFormat = normalize ? "cases" : undefined,
+        color = "currentColor"
+    } = {}) {
+        // Compute values.
+        const X = d3.map(data, x);
+        const Y0 = d3.map(data, y);
+        const I = d3.range(X.length);
 
-// Set the dimensions of the canvas / graph
-var margin = {top: 30, right: 20, bottom: 30, left: 50},
-    width = 600 - margin.left - margin.right,
-    height = 270 - margin.top - margin.bottom;
+        // Compute bins.
+        const bins = d3.bin().thresholds(thresholds).value(i => X[i])(I);
+        const Y = Array.from(bins, I => d3.sum(I, i => Y0[i]));
+        if (normalize) {
+            const total = d3.sum(Y);
+            for (let i = 0; i < Y.length; ++i) Y[i] /= total;
+        }
 
-// Parse the date / time
-var parseDate = d3.time.format("%d-%b-%y").parse;
+        // Compute default domains.
+        if (xDomain === undefined) xDomain = [bins[0].x0, bins[bins.length - 1].x1];
+        if (yDomain === undefined) yDomain = [0, d3.max(Y)];
 
-// Set the ranges
-var x = d3.time.scale().range([0, width]);
-var y = d3.scale.linear().range([height, 0]);
+        // Construct scales and axes.
+        const xScale = xType(xDomain, xRange);
+        const yScale = yType(yDomain, yRange);
+        const xAxis = d3.axisBottom(xScale).ticks(width / 80, xFormat).tickSizeOuter(0);
+        const yAxis = d3.axisLeft(yScale).ticks(height / 40, yFormat);
+        yFormat = yScale.tickFormat(100, yFormat);
 
-// Define the axes
-var xAxis = d3.svg.axis().scale(x)
-    .orient("bottom").ticks(5);
+        const svg = d3.create("svg")
+            .attr("width", width)
+            .attr("height", height)
+            .attr("viewBox", [0, 0, width, height])
+            .attr("style", "max-width: 100%; height: auto; height: intrinsic;");
 
-var yAxis = d3.svg.axis().scale(y)
-    .orient("left").ticks(5);
+        svg.append("g")
+            .attr("transform", `translate(${marginLeft},0)`)
+            .call(yAxis)
+            .call(g => g.select(".domain").remove())
+            .call(g => g.selectAll(".tick line").clone()
+                .attr("x2", width - marginLeft - marginRight)
+                .attr("stroke-opacity", 0.1))
+            .call(g => g.append("text")
+                .attr("x", -marginLeft)
+                .attr("y", 10)
+                .attr("fill", "currentColor")
+                .attr("text-anchor", "start")
+                .text(yLabel));
 
-// Define the line
-var valueline = d3.svg.line()
-    .x(function(d) { return x(d.date); })
-    .y(function(d) { return y(d.close); });
-    
-// Adds the svg canvas
-var svg = d3.select("body")
-    .append("svg")
-        .attr("width", width + margin.left + margin.right)
-        .attr("height", height + margin.top + margin.bottom)
-    .append("g")
-        .attr("transform", 
-              "translate(" + margin.left + "," + margin.top + ")");
+        svg.append("g")
+            .attr("fill", color)
+            .selectAll("rect")
+            .data(bins)
+            .join("rect")
+            .attr("x", d => xScale(d.x0) + insetLeft)
+            .attr("width", d => Math.max(0, xScale(d.x1) - xScale(d.x0) - insetLeft - insetRight))
+            .attr("y", (d, i) => yScale(Y[i]))
+            .attr("height", (d, i) => yScale(0) - yScale(Y[i]))
+            .append("title")
+            .text((d, i) => [`${d.x0} ≤ x < ${d.x1}`, yFormat(Y[i])].join("\n"));
 
-// Get the data
-d3.csv("data.csv", function(error, data) {
-    data.forEach(function(d) {
-        d.date = parseDate(d.date);
-        d.close = +d.close;
-    });
+        svg.append("g")
+            .attr("transform", `translate(0,${height - marginBottom})`)
+            .call(xAxis)
+            .call(g => g.append("text")
+                .attr("x", width - marginRight)
+                .attr("y", 27)
+                .attr("fill", "currentColor")
+                .attr("text-anchor", "end")
+                .text(xLabel));
 
-    // Scale the range of the data
-    x.domain(d3.extent(data, function(d) { return d.date; }));
-    y.domain([0, d3.max(data, function(d) { return d.close; })]);
+        return svg.node();
+    }
+    // Copyright 2021 Observable, Inc.
+    // Released under the ISC license.
+    // https://observablehq.com/@d3/histogram
+    function Histogram(data, {
+        value = d => d, // convenience alias for x
+        domain, // convenience alias for xDomain
+        label, // convenience alias for xLabel
+        format, // convenience alias for xFormat
+        type = d3.scaleLinear, // convenience alias for xType
+        x = value, // given d in data, returns the (quantitative) x-value
+        y = () => 1, // given d in data, returns the (quantitative) weight
+        thresholds = 40, // approximate number of bins to generate, or threshold function
+        normalize, // whether to normalize values to a total of 100%
+        marginTop = 20, // top margin, in pixels
+        marginRight = 30, // right margin, in pixels
+        marginBottom = 30, // bottom margin, in pixels
+        marginLeft = 40, // left margin, in pixels
+        width = 640, // outer width of chart, in pixels
+        height = 400, // outer height of chart, in pixels
+        insetLeft = 0.5, // inset left edge of bar
+        insetRight = 0.5, // inset right edge of bar
+        xType = type, // type of x-scale
+        xDomain = domain, // [xmin, xmax]
+        xRange = [marginLeft, width - marginRight], // [left, right]
+        xLabel = label, // a label for the x-axis
+        xFormat = format, // a format specifier string for the x-axis
+        yType = d3.scaleLinear, // type of y-scale
+        yDomain, // [ymin, ymax]
+        yRange = [height - marginBottom, marginTop], // [bottom, top]
+        yLabel = "↑ Frequency", // a label for the y-axis
+        yFormat = normalize ? "%" : undefined, // a format specifier string for the y-axis
+        color = "currentColor" // bar fill color
+    } = {}) {
+        // Compute values.
+        const X = d3.map(data, x);
+        const Y0 = d3.map(data, y);
+        const I = d3.range(X.length);
 
-    // Add the valueline path.
-    svg.append("path")
-        .attr("class", "line")
-        .attr("d", valueline(data));
+        // Compute bins.
+        const bins = d3.bin().thresholds(thresholds).value(i => X[i])(I);
+        const Y = Array.from(bins, I => d3.sum(I, i => Y0[i]));
+        if (normalize) {
+            const total = d3.sum(Y);
+            for (let i = 0; i < Y.length; ++i) Y[i] /= total;
+        }
 
-    // Add the scatterplot
-    svg.selectAll("dot")
-        .data(data)
-      .enter().append("circle")
-        .attr("r", 3.5)
-        .attr("cx", function(d) { return x(d.date); })
-        .attr("cy", function(d) { return y(d.close); });
+        // Compute default domains.
+        if (xDomain === undefined) xDomain = [bins[0].x0, bins[bins.length - 1].x1];
+        if (yDomain === undefined) yDomain = [0, d3.max(Y)];
 
-    // Add the X Axis
-    svg.append("g")
-        .attr("class", "x axis")
-        .attr("transform", "translate(0," + height + ")")
-        .call(xAxis);
+        // Construct scales and axes.
+        const xScale = xType(xDomain, xRange);
+        const yScale = yType(yDomain, yRange);
+        const xAxis = d3.axisBottom(xScale).ticks(width / 80, xFormat).tickSizeOuter(0);
+        const yAxis = d3.axisLeft(yScale).ticks(height / 40, yFormat);
+        yFormat = yScale.tickFormat(100, yFormat);
 
-    // Add the Y Axis
-    svg.append("g")
-        .attr("class", "y axis")
-        .call(yAxis);
+        const svg = d3.create("svg")
+            .attr("width", width)
+            .attr("height", height)
+            .attr("viewBox", [0, 0, width, height])
+            .attr("style", "max-width: 100%; height: auto; height: intrinsic;");
 
-});
+        svg.append("g")
+            .attr("transform", `translate(${marginLeft},0)`)
+            .call(yAxis)
+            .call(g => g.select(".domain").remove())
+            .call(g => g.selectAll(".tick line").clone()
+                .attr("x2", width - marginLeft - marginRight)
+                .attr("stroke-opacity", 0.1))
+            .call(g => g.append("text")
+                .attr("x", -marginLeft)
+                .attr("y", 10)
+                .attr("fill", "currentColor")
+                .attr("text-anchor", "start")
+                .text(yLabel));
 
+        svg.append("g")
+            .attr("fill", color)
+            .selectAll("rect")
+            .data(bins)
+            .join("rect")
+            .attr("x", d => xScale(d.x0) + insetLeft)
+            .attr("width", d => Math.max(0, xScale(d.x1) - xScale(d.x0) - insetLeft - insetRight))
+            .attr("y", (d, i) => yScale(Y[i]))
+            .attr("height", (d, i) => yScale(0) - yScale(Y[i]))
+            .append("title")
+            .text((d, i) => [`${d.x0} ≤ x < ${d.x1}`, yFormat(Y[i])].join("\n"));
+
+        svg.append("g")
+            .attr("transform", `translate(0,${height - marginBottom})`)
+            .call(xAxis)
+            .call(g => g.append("text")
+                .attr("x", width - marginRight)
+                .attr("y", 27)
+                .attr("fill", "currentColor")
+                .attr("text-anchor", "end")
+                .text(xLabel));
+
+        return svg.node();
+    }
+    d3.csv('/botulism_yearly_counts.csv', d3.autoType).then(
+        function(d) {
+            for (let index = 0; index<d.length; index++) {
+                const element = d[index];
+                console.log(element.year);
+                console.log(element.count);
+            }
+        }
+    )
+    //const botulism_yearly = await FileAttachment("/botulism_yearly_counts.csv").csv({ typed: true });
+    //scatterplot = Scatterplot(botulism_yearly, {
+    //    value: d => d.rate,
+    //    label: "Yearly amount of Botulism cases in US since 1917 - 2017",
+    //    width,
+    //    height: 500,
+    //    color: "steelblue"
+    //});
+    //const botulism_types = await FileAttachment("/botulism_type_counts.csv").csv({ typed: true });
+    //histogram = Histogram(botulism_types, {
+    //    value: d => d.rate,
+    //    label: "Botulism types case amounts in the last 100 years",
+    //    width,
+    //    height: 500,
+    //    color: "steelblue"
+    //});
 </script>
 </body>
