--- a/index.html
+++ b/index.html
@@ -1,253 +1,73 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
-<style> /* set the CSS */
-
-body { font: 12px Arial;}
-
-path { 
-    stroke: steelblue;
-    stroke-width: 2;
-    fill: none;
-}
-
-.axis path,
-.axis line {
-    fill: none;
-    stroke: grey;
-    stroke-width: 1;
-    shape-rendering: crispEdges;
-}
-
-</style>
-<body>
-
-<!-- load the d3.js library -->    
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>D3 graphs</title>
+    <link rel="stylesheet" href="style.css">
     <script src="https://d3js.org/d3.v7.min.js"></script>
-
+</head>
+<body onload="main()">
 <script>
-    function Scatterplot(data, {
-        value = d => d,
-        domain,
-        label,
-        format,
-        type = d3.scaleLinear,
-        x = value,
-        y = () => 1,
-        thresholds = 40,
-        normalize,
-        marginTop = 20,
-        marginRight = 30,
-        marginBottom = 30,
-        marginLeft = 40,
-        width = 640,
-        height = 400,
-        insetLeft = 0.5,
-        insetRight = 0.5,
-        xType = type,
-        xDomain = domain,
-        xRange = [marginLeft, width - marginRight],
-        xLabel = lebel,
-        xFormat = format,
-        yType = d3.scaleLinear,
-        yDomain,
-        yRange = [height - marginBottom, marginTop],
-        yLabel = "Number of Cases",
-        yFormat = normalize ? "cases" : undefined,
-        color = "currentColor"
-    } = {}) {
-        // Compute values.
-        const X = d3.map(data, x);
-        const Y0 = d3.map(data, y);
-        const I = d3.range(X.length);
+    function main() {
+        var svg = d3.select("svg"),
+            margin = 200,
+            width = svg.attr("width") - margin,
+            height = svg.attr("height") - margin;
 
-        // Compute bins.
-        const bins = d3.bin().thresholds(thresholds).value(i => X[i])(I);
-        const Y = Array.from(bins, I => d3.sum(I, i => Y0[i]));
-        if (normalize) {
-            const total = d3.sum(Y);
-            for (let i = 0; i < Y.length; ++i) Y[i] /= total;
-        }
+            
+        svg.append("text")
+            .attr("transform", "translate(100,0)")
+            .attr("x", 120)
+            .attr("y", 50)
+            .attr("font-size", "22px")
+            .text("Amount of Botulism cases every year from 1917 - 2017")
 
-        // Compute default domains.
-        if (xDomain === undefined) xDomain = [bins[0].x0, bins[bins.length - 1].x1];
-        if (yDomain === undefined) yDomain = [0, d3.max(Y)];
-
-        // Construct scales and axes.
-        const xScale = xType(xDomain, xRange);
-        const yScale = yType(yDomain, yRange);
-        const xAxis = d3.axisBottom(xScale).ticks(width / 80, xFormat).tickSizeOuter(0);
-        const yAxis = d3.axisLeft(yScale).ticks(height / 40, yFormat);
-        yFormat = yScale.tickFormat(100, yFormat);
-
-        const svg = d3.create("svg")
-            .attr("width", width)
-            .attr("height", height)
-            .attr("viewBox", [0, 0, width, height])
-            .attr("style", "max-width: 100%; height: auto; height: intrinsic;");
-
-        svg.append("g")
-            .attr("transform", `translate(${marginLeft},0)`)
-            .call(yAxis)
-            .call(g => g.select(".domain").remove())
-            .call(g => g.selectAll(".tick line").clone()
-                .attr("x2", width - marginLeft - marginRight)
-                .attr("stroke-opacity", 0.1))
-            .call(g => g.append("text")
-                .attr("x", -marginLeft)
-                .attr("y", 10)
-                .attr("fill", "currentColor")
-                .attr("text-anchor", "start")
-                .text(yLabel));
-
-        svg.append("g")
-            .attr("fill", color)
-            .selectAll("rect")
-            .data(bins)
-            .join("rect")
-            .attr("x", d => xScale(d.x0) + insetLeft)
-            .attr("width", d => Math.max(0, xScale(d.x1) - xScale(d.x0) - insetLeft - insetRight))
-            .attr("y", (d, i) => yScale(Y[i]))
-            .attr("height", (d, i) => yScale(0) - yScale(Y[i]))
-            .append("title")
-            .text((d, i) => [`${d.x0} ≤ x < ${d.x1}`, yFormat(Y[i])].join("\n"));
-
-        svg.append("g")
-            .attr("transform", `translate(0,${height - marginBottom})`)
-            .call(xAxis)
-            .call(g => g.append("text")
-                .attr("x", width - marginRight)
-                .attr("y", 27)
-                .attr("fill", "currentColor")
+        var xScale = d3.scaleLinear().range([0, width]),
+            yScale = d3.scaleLinear().range([height, 0]);
+        var g = svg.append("g")
+            .attr("transform", "translate(" + 100 + "," + 100 + ")");
+        d3.csv("/botulism_yearly_counts.csv").then(function (data) {
+            xScale.domain(d3.extent(data, function (d) { return d.year; })).nice();
+            yScale.domain(d3.extent(data, function (d) { return +d.count; })).nice();
+            g.append("g")
+                .attr("transform", "translate(0," + height + ")")
+                .call(d3.axisBottom(xScale))
+                .append("text")
+                .attr("y", height - 250)
+                .attr("x", width - 100)
                 .attr("text-anchor", "end")
-                .text(xLabel));
-
-        return svg.node();
+                .attr("stroke", "black")
+                .text("Year");
+            g.append("g")
+                .call(d3.axisLeft(yScale).tickFormat(function (d) { return "Cases\n" + d; }).ticks(10))
+                .append("text")
+                .attr("transform", "rotate(-90)")
+                .attr("y", -20)
+                .attr("x", -150)
+                .attr('dy', '-5em')
+                .attr('text-anchor', 'end')
+                .attr('stroke', 'black')
+                .text('Amount of cases')
+            g.selectAll(".dot")
+                .data(data)
+                .enter().append("circle")
+                .attr("class", "dot")
+                .attr('r', 3.5)
+                .attr("cx", function (d) { return xScale(d.year); })
+                .attr("cy", function (d) { return yScale(d.count); })
+            g.append("path")
+                .datum(data)
+                .attr("fill", "none")
+                .attr("stroke", "#69b3a2")
+                .attr("stroke-width", 1.5)
+                .attr("d", d3.line()
+                    .x(function (d) { return xScale(d.year) })
+                    .y(function (d) { return yScale(d.count) })
+                )
+        })
     }
-    // Copyright 2021 Observable, Inc.
-    // Released under the ISC license.
-    // https://observablehq.com/@d3/histogram
-    function Histogram(data, {
-        value = d => d, // convenience alias for x
-        domain, // convenience alias for xDomain
-        label, // convenience alias for xLabel
-        format, // convenience alias for xFormat
-        type = d3.scaleLinear, // convenience alias for xType
-        x = value, // given d in data, returns the (quantitative) x-value
-        y = () => 1, // given d in data, returns the (quantitative) weight
-        thresholds = 40, // approximate number of bins to generate, or threshold function
-        normalize, // whether to normalize values to a total of 100%
-        marginTop = 20, // top margin, in pixels
-        marginRight = 30, // right margin, in pixels
-        marginBottom = 30, // bottom margin, in pixels
-        marginLeft = 40, // left margin, in pixels
-        width = 640, // outer width of chart, in pixels
-        height = 400, // outer height of chart, in pixels
-        insetLeft = 0.5, // inset left edge of bar
-        insetRight = 0.5, // inset right edge of bar
-        xType = type, // type of x-scale
-        xDomain = domain, // [xmin, xmax]
-        xRange = [marginLeft, width - marginRight], // [left, right]
-        xLabel = label, // a label for the x-axis
-        xFormat = format, // a format specifier string for the x-axis
-        yType = d3.scaleLinear, // type of y-scale
-        yDomain, // [ymin, ymax]
-        yRange = [height - marginBottom, marginTop], // [bottom, top]
-        yLabel = "↑ Frequency", // a label for the y-axis
-        yFormat = normalize ? "%" : undefined, // a format specifier string for the y-axis
-        color = "currentColor" // bar fill color
-    } = {}) {
-        // Compute values.
-        const X = d3.map(data, x);
-        const Y0 = d3.map(data, y);
-        const I = d3.range(X.length);
-
-        // Compute bins.
-        const bins = d3.bin().thresholds(thresholds).value(i => X[i])(I);
-        const Y = Array.from(bins, I => d3.sum(I, i => Y0[i]));
-        if (normalize) {
-            const total = d3.sum(Y);
-            for (let i = 0; i < Y.length; ++i) Y[i] /= total;
-        }
-
-        // Compute default domains.
-        if (xDomain === undefined) xDomain = [bins[0].x0, bins[bins.length - 1].x1];
-        if (yDomain === undefined) yDomain = [0, d3.max(Y)];
-
-        // Construct scales and axes.
-        const xScale = xType(xDomain, xRange);
-        const yScale = yType(yDomain, yRange);
-        const xAxis = d3.axisBottom(xScale).ticks(width / 80, xFormat).tickSizeOuter(0);
-        const yAxis = d3.axisLeft(yScale).ticks(height / 40, yFormat);
-        yFormat = yScale.tickFormat(100, yFormat);
-
-        const svg = d3.create("svg")
-            .attr("width", width)
-            .attr("height", height)
-            .attr("viewBox", [0, 0, width, height])
-            .attr("style", "max-width: 100%; height: auto; height: intrinsic;");
-
-        svg.append("g")
-            .attr("transform", `translate(${marginLeft},0)`)
-            .call(yAxis)
-            .call(g => g.select(".domain").remove())
-            .call(g => g.selectAll(".tick line").clone()
-                .attr("x2", width - marginLeft - marginRight)
-                .attr("stroke-opacity", 0.1))
-            .call(g => g.append("text")
-                .attr("x", -marginLeft)
-                .attr("y", 10)
-                .attr("fill", "currentColor")
-                .attr("text-anchor", "start")
-                .text(yLabel));
-
-        svg.append("g")
-            .attr("fill", color)
-            .selectAll("rect")
-            .data(bins)
-            .join("rect")
-            .attr("x", d => xScale(d.x0) + insetLeft)
-            .attr("width", d => Math.max(0, xScale(d.x1) - xScale(d.x0) - insetLeft - insetRight))
-            .attr("y", (d, i) => yScale(Y[i]))
-            .attr("height", (d, i) => yScale(0) - yScale(Y[i]))
-            .append("title")
-            .text((d, i) => [`${d.x0} ≤ x < ${d.x1}`, yFormat(Y[i])].join("\n"));
-
-        svg.append("g")
-            .attr("transform", `translate(0,${height - marginBottom})`)
-            .call(xAxis)
-            .call(g => g.append("text")
-                .attr("x", width - marginRight)
-                .attr("y", 27)
-                .attr("fill", "currentColor")
-                .attr("text-anchor", "end")
-                .text(xLabel));
-
-        return svg.node();
-    }
-    d3.csv('/botulism_yearly_counts.csv', d3.autoType).then(
-        function(d) {
-            for (let index = 0; index<d.length; index++) {
-                const element = d[index];
-                console.log(element.year);
-                console.log(element.count);
-            }
-        }
-    )
-    //const botulism_yearly = await FileAttachment("/botulism_yearly_counts.csv").csv({ typed: true });
-    //scatterplot = Scatterplot(botulism_yearly, {
-    //    value: d => d.rate,
-    //    label: "Yearly amount of Botulism cases in US since 1917 - 2017",
-    //    width,
-    //    height: 500,
-    //    color: "steelblue"
-    //});
-    //const botulism_types = await FileAttachment("/botulism_type_counts.csv").csv({ typed: true });
-    //histogram = Histogram(botulism_types, {
-    //    value: d => d.rate,
-    //    label: "Botulism types case amounts in the last 100 years",
-    //    width,
-    //    height: 500,
-    //    color: "steelblue"
-    //});
 </script>
+    <h1>Hypythesis: The amount of foodborne Botulism decreased over time compared to other types because of stricter food laws.</h1>
+    <svg width="1000" height="600"></svg>
 </body>
+</html>
