--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body onload="main()">
 <script>
     function main() {
-        var svg = d3.select("svg"),
+        var svg = d3.select("#svg1"),
             margin = 200,
             width = svg.attr("width") - margin,
             height = svg.attr("height") - margin;
@@ -17,7 +17,7 @@
             
         svg.append("text")
             .attr("transform", "translate(100,0)")
-            .attr("x", 120)
+            .attr("x", 30)
             .attr("y", 50)
             .attr("font-size", "22px")
             .text("Amount of Botulism cases every year from 1917 - 2017")
@@ -33,8 +33,8 @@
                 .attr("transform", "translate(0," + height + ")")
                 .call(d3.axisBottom(xScale))
                 .append("text")
-                .attr("y", height - 250)
-                .attr("x", width - 100)
+                .attr("y", height - 160)
+                .attr("x", width - 300)
                 .attr("text-anchor", "end")
                 .attr("stroke", "black")
                 .text("Year");
@@ -43,7 +43,7 @@
                 .append("text")
                 .attr("transform", "rotate(-90)")
                 .attr("y", -20)
-                .attr("x", -150)
+                .attr("x", -60)
                 .attr('dy', '-5em')
                 .attr('text-anchor', 'end')
                 .attr('stroke', 'black')
@@ -65,9 +65,68 @@
                     .y(function (d) { return yScale(d.count) })
                 )
         })
+        var svg2 = d3.select("#svg2"),
+            margin = 200,
+            width = svg2.attr("width") - margin,
+            height = svg2.attr("height") - margin;
+        svg2.append("text")
+            .attr("transform", "translate(100,0)")
+            .attr("x", 30)
+            .attr("y", 50)
+            .attr("font-size", "22px")
+            .text("Amount of Botulism cases every year from 1917 - 2017")
+
+        var xScale = d3.scaleLinear()
+            .range([0, width])
+            .domain([0, 2020]),
+            yScale = d3.scaleLinear().range([height, 0]);
+        var g = svg2.append("g")
+            .attr("transform", "translate(" + 100 + "," + 100 + ")");
+        d3.csv("botulism_type_counts.csv").then(function (data) {
+            xScale.domain(d3.extent(data, function (d) { return d.year; })).nice();
+            yScale.domain(d3.extent(data, function (d) { return +d.count; })).nice();
+            var histogram
+            g.append("g")
+                .attr("transform", "translate(0," + height + ")")
+                .call(d3.axisBottom(xScale))
+                .append("text")
+                .attr("y", height - 160)
+                .attr("x", width - 300)
+                .attr("text-anchor", "end")
+                .attr("stroke", "black")
+                .text("Year");
+            g.append("g")
+                .call(d3.axisLeft(yScale).tickFormat(function (d) { return "Cases\n" + d; }).ticks(10))
+                .append("text")
+                .attr("transform", "rotate(-90)")
+                .attr("y", -20)
+                .attr("x", -60)
+                .attr('dy', '-5em')
+                .attr('text-anchor', 'end')
+                .attr('stroke', 'black')
+                .text('Amount of cases')
+            g.selectAll(".dot")
+                .data(data)
+                .enter().append("circle")
+                .attr("class", "dot")
+                .attr('r', 3.5)
+                .attr("cx", function (d) { return xScale(d.year); })
+                .attr("cy", function (d) { return yScale(d.count); })
+            g.append("path")
+                .datum(data)
+                .attr("fill", "none")
+                .attr("stroke", "#69b3a2")
+                .attr("stroke-width", 1.5)
+                .attr("d", d3.line()
+                    .x(function (d) { return xScale(d.year) })
+                    .y(function (d) { return yScale(d.count) })
+                )
+        })
+
     }
 </script>
     <h1>Hypythesis: The amount of foodborne Botulism decreased over time compared to other types because of stricter food laws.</h1>
-    <svg width="1000" height="600"></svg>
+    <svg width="800" height="400" id="svg1"></svg>
+    <svg width="400" height="800" id="svg2"></svg>
 </body>
 </html>
