--- a/index.html
+++ b/index.html
@@ -127,5 +127,7 @@
     <h1>Hypythesis: The amount of botulism cases increased over time because new types were discovered.</h1>
     <svg width="800" height="400" id="svg1"></svg>
     <svg width="800" height="400" id="svg2"></svg>
+    <h3>Data Sources:</h3>
+    <p>https://data.cdc.gov/Foodborne-Waterborne-and-Related-Diseases/Botulism/66i6-hisz</p>
 </body>
 </html>
